tests/fat_arrow_block_failure/error.txt
Parse error: ./tests/fat_arrow_block_failure/fat_arrow_block_failure.fae:1
 Expected '{' but found "=>"
  1| fn function() => print_string("Functions do not allow fat arrow")
                   ^^

Parse error: ./tests/fat_arrow_block_failure/fat_arrow_block_failure.fae:5
 Unexpected token "\n" while attempting to parse expression atom
  5|     while index < 10 =>
                            ^
